unpackaged/main/default/objects/Knowledge__kav/fields/Account_Billing_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address_City__c</fullName>
    <formula>Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address City</label>
    <type>Text</type>
</CustomField>