unpackaged/main/default/objects/Knowledge__kav/fields/Account_Billing_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address_Country__c</fullName>
    <formula>Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address Country</label>
    <type>Text</type>
</CustomField>