unpackaged/main/default/objects/Knowledge__kav/fields/Account_Billing_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address_State__c</fullName>
    <formula>Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address State</label>
    <type>Text</type>
</CustomField>