unpackaged/main/default/objects/Knowledge__kav/fields/Account_Billing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address_Street__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address Street</label>
    <type>Text</type>
</CustomField>