unpackaged/main/default/objects/Knowledge__kav/fields/Account_Billing_Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address_Zip__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address Zip</label>
    <type>Text</type>
</CustomField>