unpackaged/main/default/objects/Knowledge__kav/fields/Account_Knowledge_Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Knowledge_Article_Type__c</fullName>
    <formula>IF ( INCLUDES ( Account__r.Knowledge_Article_Type__c , &quot;Screening Facility&quot; ), &quot;Screening Facility; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.Knowledge_Article_Type__c , &quot;Mammogram Facility&quot; ), &quot;Mammogram Facility; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.Knowledge_Article_Type__c , &quot;Cosmetic&quot; ), &quot;Cosmetic; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.Knowledge_Article_Type__c , &quot;Financial Assistance&quot; ), &quot;Financial Assistance; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Knowledge Article Type</label>
    <type>Text</type>
</CustomField>