unpackaged/main/default/objects/Knowledge__kav/fields/Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Application_Link__c</fullName>
    <inlineHelpText>If the program offers online application, link to the web form.</inlineHelpText>
    <label>Application Link</label>
    <type>Url</type>
</CustomField>