unpackaged/main/default/objects/Knowledge__kav/fields/Article_Introduction__c.field-meta.xml
<CustomField>
    <fullName>Article_Introduction__c</fullName>
    <inlineHelpText>This is just the long summary or top section of the web site page being referred to.</inlineHelpText>
    <label>Article Introduction</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>