unpackaged/main/default/objects/Knowledge__kav/fields/Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Article_Type__c</fullName>
    <label>Article Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Knowledge_Article_Type</valueSetName>
    </valueSet>
</CustomField>