unpackaged/main/default/objects/Knowledge__kav/fields/Care__c.field-meta.xml
<CustomField>
    <fullName>Care__c</fullName>
    <label>Care</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>