unpackaged/main/default/objects/Knowledge__kav/fields/Concat_name_for_Search_Article_Flow__c.field-meta.xml
<CustomField>
    <fullName>Concat_name_for_Search_Article_Flow__c</fullName>
    <formula>Title  + &apos; | &apos; +  Summary  + &apos; | &apos; +  Account__r.Name  +  &apos; | &apos;+   Account_Billing_Address_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concat name for Search Article Flow</label>
    <type>Text</type>
</CustomField>