unpackaged/main/default/objects/Knowledge__kav/fields/ConcatList__c.field-meta.xml
<CustomField>
    <fullName>ConcatList__c</fullName>
    <description>Concatenated list of selected Sub Categories</description>
    <label>ConcatList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>