unpackaged/main/default/objects/Knowledge__kav/fields/Counties_Served__c.field-meta.xml
<CustomField>
    <fullName>Counties_Served__c</fullName>
    <label>Counties Served</label>
    <length>255</length>
    <type>Text</type>
</CustomField>