unpackaged/main/default/objects/Knowledge__kav/fields/Economic_Stability__c.field-meta.xml
<CustomField>
    <fullName>Economic_Stability__c</fullName>
    <label>Economic Stability</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>