unpackaged/main/default/objects/Knowledge__kav/fields/Einstein_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Recommendations__c</fullName>
    <label>Einstein Recommendations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>