unpackaged/main/default/objects/Knowledge__kav/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <label>Eligibility</label>
    <type>TextArea</type>
</CustomField>