unpackaged/main/default/objects/Knowledge__kav/fields/Featured_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Featured_End_Date__c</fullName>
    <label>Featured End Date</label>
    <type>Date</type>
</CustomField>