unpackaged/main/default/objects/Knowledge__kav/fields/Featured_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Featured_Start_Date__c</fullName>
    <label>Featured Start Date</label>
    <type>Date</type>
</CustomField>