unpackaged/main/default/objects/Knowledge__kav/fields/Internal_Topics__c.field-meta.xml
<CustomField>
    <fullName>Internal_Topics__c</fullName>
    <label>Internal Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAHEI</fullName>
            </value>
            <value>
                <fullName>Clinical Trials</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Health Education</fullName>
            </value>
            <value>
                <fullName>Newly Diagnosed – maybe an audience attribute</fullName>
            </value>
            <value>
                <fullName>Prescription drug costs</fullName>
            </value>
            <value>
                <fullName>Symptom management</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>Cultural/ Religious/ Spiritual</fullName>
            </value>
            <value>
                <fullName>Medical Care</fullName>
            </value>
            <value>
                <fullName>Economic stability</fullName>
            </value>
            <value>
                <fullName>Support/ Patient tools</fullName>
            </value>
            <value>
                <fullName>Transportation Assistance</fullName>
            </value>
            <value>
                <fullName>BCCP/NBCCEDP</fullName>
            </value>
            <value>
                <fullName>Patient Navigation Tools</fullName>
            </value>
            <value>
                <fullName>TAP Tools</fullName>
            </value>
            <value>
                <fullName>Helpline Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>