unpackaged/main/default/objects/Knowledge__kav/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Populated by an automation to concatenate values into a field used by Knowledge search and matching.</description>
    <label>Keywords</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>