unpackaged/main/default/objects/Knowledge__kav/fields/Knowledge_Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Type__c</fullName>
    <label>Knowledge Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Knowledge_Article_Type</valueSetName>
    </valueSet>
</CustomField>