unpackaged/main/default/objects/Knowledge__kav/fields/Komen_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Komen_Site_URL__c</fullName>
    <inlineHelpText>Enter the URL of the page on the Komen Public web site.</inlineHelpText>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>