unpackaged/main/default/objects/Knowledge__kav/fields/Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Review_Date__c</fullName>
    <description>Date this article was last reviewed by Knowledge Management team</description>
    <label>Last Review Date</label>
    <type>Date</type>
</CustomField>