unpackaged/main/default/objects/Knowledge__kav/fields/Other_Segments__c.field-meta.xml
<CustomField>
    <fullName>Other_Segments__c</fullName>
    <label>Other Segments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indiv w/ Disability</fullName>
            </value>
            <value>
                <fullName>LGBTQI</fullName>
            </value>
            <value>
                <fullName>Non-citizen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>