unpackaged/main/default/objects/Knowledge__kav/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Middle Eastern and North African (MENA)</fullName>
            </value>
            <value>
                <fullName>Prefer Not to Answer</fullName>
            </value>
            <value>
                <fullName>White or Caucasian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>