unpackaged/main/default/objects/Knowledge__kav/fields/Relationship_To_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_Cancer__c</fullName>
    <label>Relationship To Cancer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relationship_To_Cancer</valueSetName>
    </valueSet>
</CustomField>