unpackaged/main/default/objects/Knowledge__kav/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State picklist populated from related account to allow searching.</description>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>