unpackaged/main/default/objects/Knowledge__kav/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <label>Support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>