unpackaged/main/default/objects/Knowledge__kav/validationRules/URL_Required_for_Web_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>URL_Required_for_Web_Resource</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            IF(ISPICKVAL(Resource_Type__c ,&apos;Web&apos;),true,false),
            ISBLANK( Komen_Site_URL__c ),
            !$Setup.Bypass__c.Validation__c,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot;,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;knowledge__kav&quot;
        )</errorConditionFormula>
    <errorMessage>Please enter the Site URL if Resource Type is &quot;Web&quot;</errorMessage>
</ValidationRule>